# zed-extension-graphql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  extension.json  extension.toml
.github/workflows/: release.yml
grammars/: graphql.toml
languages/graphql/: config.toml  highlights.scm
src/: graphql.rs
